--- a/InboundCycle - FrontEnd/Layout/index.html
+++ b/InboundCycle - FrontEnd/Layout/index.html
@@ -45,10 +45,10 @@
       <hr>
       <h2>Lorem ipsum dolor sit amet consectetur adipiscing elit eu porttitor ligula donec</h2>
       <!-- Body text -->
-      <p>Duis blandit tempor facilisis. Curabitur ipsum turpis, <a href="#" title="Enlace de prueba">venenatis</a> et massa id, congue dignissim nibh. Praesent vitae justo vel metus faucibus vehicula. Donec vitae semper eros, et viverra leo. Quisque maximus semper mi, sit amet vehicula quam ultricies eu. Nullam euismod orci sed erat blandit vulputate nec vitae arcu. Integer nec imperdiet sem. Nullam a nibh rhoncus, tincidunt arcu eu, porta erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae semper eros, et viverra leo.</p>
+      <p><strong>Duis blandit tempor facilisis. Curabitur ipsum turpis, <a href="#" title="Enlace de prueba">venenatis</a> et massa id, congue dignissim nibh. Praesent vitae justo vel metus faucibus vehicula. Donec vitae semper eros, et viverra leo. Quisque maximus semper mi, sit amet vehicula quam ultricies eu. Nullam euismod orci sed erat blandit vulputate nec vitae arcu. Integer nec imperdiet sem. Nullam a nibh rhoncus, tincidunt arcu eu, porta erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae semper eros, et viverra leo.</strong></p>
       <!-- Emphasizes -->
       <div class="emphasizes">
-        Rellena el formulario para descargar la guía <i class="fa fa-long-arrow-right"></i>
+        RELLENA EL FORMULARIO PARA DESCARGAR LA GUÍA <i class="fa fa-long-arrow-right"></i>
       </div>
     </section>
     <!-- Aside -->
@@ -88,9 +88,8 @@
   <!-- Pop-up -->
   <div class="popup">
     <div class="caption">
-      
-      <p>¡Muchas gracias!</p>
-      <button class="exit">CERRAR</button>
+      <button class="close-button">X</button>
+      <p>SU E-BOOK JA VAI A SER ENVIADO <br>¡Muchas gracias!</p>
     </div>
   </div>
   <script src="js/script.js"></script>
