--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,7 @@
 *{
     margin: 0px;
     padding: 0;
-    box-sizing: border-box;
-    
-}
-
-/*FONTS*/
-@font-face {
-    font-family: "awesome";
-    src: url("./../fonts/fontawesome-webfont.ttf") format("truetype"),
-    url("./../fonts/FontAwesome.otf") format("opentype");
-    font-weight: normal;
-    font-style: normal;
-}
-
-html, body{
-    min-height: 100%
+    box-sizing: border-box; 
 }
 
 /*HEADER*/
@@ -48,21 +34,18 @@ html, body{
     background-image: url("./../img/separator-image.jpg");
     width: 100%;
     height: 118px; 
-   
 }
 
-/*BOX*/
+/*CONTAINER*/
 .wrapper{
+    font-family: sans-serif;
     display: inline-block;
     margin: 0% 12% 0% 12%; 
-    max-width: 100%; 
     display: inline-block;
     align-items: center;
-   
 }
 
 .wrapper h1{
-    font-family: "awesome", 'verdana';
     color: #E65A22;
     font-size: 35px;
     margin-top: 4%;
@@ -70,15 +53,12 @@ html, body{
 }
 
 .wrapper hr{
-    font-family: "awesome", 'verdana';
     border-color: #c5c4c4;
     margin-top: 80px;
     opacity: 0.3;
-    
 }
 
 .wrapper h2{
-    font-family: "awesome", 'verdana';
     color: #B0ADA7;
     font-size:22px;
     margin-top: 49px;
@@ -86,17 +66,16 @@ html, body{
 }
 
 .wrapper p{ 
-    font-family: "awesome", 'verdana';
     color: #000;
     margin-bottom: 48px;
     margin-top: 42px;
     width: 130%;  
     font-size: 14px;
+    line-height: 1.5;
 }
 
 .wrapper a{
     color: #E36120;
-    font-family: "awesome", 'verdana';
 }
 
 .ebook{ 
@@ -106,38 +85,33 @@ html, body{
     bottom: 33px;  
 }
 
+/*FORM*/
 aside{
     display: inline-block !important;
     position: absolute;
 }
 
 form{ 
-    font-family: "awesome", 'verdana';
     background-color: #D6D6D4;
     margin-left: 66%;
     margin-top: 15%;
     width: 355px; 
     padding: 9% 6% 9% 6%;
-
 }
 
 form h3{
-    font-family: "awesome", 'verdana';
     color: #E36120;
     text-align: center;
     padding: 5%; 
     font-size: 17px; 
-    
 }
 
-.formCamp{ 
-    font-family: "awesome", 'verdana';
+.form-camp{ 
     display: flex;
     margin: 0 auto;
    font-size: 18px;
    padding:10px;
-   width: 80%;
-    text-align: left;  
+   width: 80%; 
 }
 
 .check-box{
@@ -147,12 +121,10 @@ form h3{
 
 label a{
     text-decoration: none;
-    font-family: "awesome", 'verdana';
 }
 
 fieldset{
     border: none;
-    
 }
 
 .formButton{
@@ -169,20 +141,18 @@ fieldset{
    align-items:center;
    margin-bottom: 10px;
    margin-top: 15px;
-   font-family: "awesome", 'verdana';
 }
 
 button:hover{
     background-color: #9C3C00;
 }
 
+/*TEXT*/
 .emphasizes{
     color: #E36120;
     font-size: 22px; 
     margin-left: 14%;
     margin-bottom: 80px;
-    font-family: "awesome", 'verdana';
-    
 }
 
 section{
@@ -190,11 +160,11 @@ display: inline-block !important;
 width: 50%;
 }
 
+/*FOOTER*/
 footer{
     background-color: #424242;
-    font-family: "awesome", 'verdana';
     width: 100%;
-    height: 110px;
+    height: 120px;
     align-items: center;
     padding-left: 10%;
     padding-right: 10%;
@@ -212,7 +182,6 @@ footer{
 }
 
 .footer-frame li, small{
-    align-items: center;
     list-style: none; 
     padding: 20px;  
     font-size: 12px;
@@ -226,11 +195,11 @@ footer{
 footer hr{
     height: 12px;
     margin-top: 22px;
-    opacity: 0.3;
-    
+    opacity: 0.3; 
 }
 
-.popup{
+/*POPUP*/
+.popup, .empty-space{
     position: fixed;
     top: 0;
     right: 0;
@@ -241,42 +210,43 @@ footer hr{
     padding: 20px;
     background: #f7f7f4;
     display: none;
+    -webkit-backdrop-filter: grayscale() blur(10px); /* Safari 9+ */
+    backdrop-filter: grayscale() blur(10px); /* Chrome and Opera */
+    background-color: rgba(255, 255, 255, 0.3);
+    height: 100%;
+    size: 100%;
 }
 
-.popup p{
+.popup p, .empty-space p{
     text-align: center;
     font-size: 28px;
     color: #E36120; 
 }
 
-.close-button{
+.close-button, .close-button1{
     background: #E36120;
     color: #fff;
     border-style: none; 
     padding: 3px;
 }
 
-.close-button:hover{ 
+.close-button:hover, .close-button1:hover{ 
     cursor: pointer;
     background: #9C3C00;
 }
 
+
+
 @media  (max-width: 1200px){
 
-    
 *{
     box-sizing: unset;
     overflow-x: hidden !important;
 }
 
-#orange-line{
-    width: 100%;
-    
-}
-   
+/*HEADER*/
     .logotype{
-        height: auto;
-        width: 55%;
+        width: 50%;
         padding: 0;
         display: flex;
         margin: 0 auto;
@@ -284,21 +254,20 @@ footer hr{
 
     .social-icons{
         font-size: 35px;
-        text-align: center;
     }
+
     .separator-image{
         display: none;
     }
 
+    /*CONTAINER*/
     section{
         display: block !important; 
-        width: 100%;
-        
+        width: 100%;   
     }
+
     .wrapper{
         display:block !important;
-        font-size: 15px;
-        width: 100%;
         padding: 12px;
         margin: 0px 5px 0px 5px;
     }
@@ -307,8 +276,7 @@ footer hr{
         font-size: 20px;
         width: 100%;
         padding: 0;
-        display: block;
-        
+        display: block;   
     }
 
     .wrapper h2, .wrapper p {
@@ -316,9 +284,6 @@ footer hr{
     }
 
     .wrapper hr{
-        width: 100%;
-        margin: 0;
-        padding: 0;
         display: none;
     }
 
@@ -327,31 +292,28 @@ footer hr{
         padding: 0;
         text-align: center;
         margin-bottom: 15px;
-        font-size: 20px;
-        
+        font-size: 20px;   
     }
 
     .ebook{
         float: none;
         padding-top: 22%;
     }
+
+    /*FORM*/
     form{
         font-size: 15px;
         margin: 0 auto;
-        margin-bottom: 200px;
+        margin-bottom: 150px;
         padding: 5px !important;
-        
-      
     }
 
     button{
-        width: auto;
         font-size: 11px;
     } 
 
+    /*FOOTER*/
     footer{
-        flex-direction:column;
-        width: 100%;
         height: auto;
         position: fixed;
         bottom: 0;
@@ -369,8 +331,4 @@ footer hr{
     footer hr{
         display:none;
     }
-
-    
-
 }
-
